--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,11 @@ yarn-error.log*
 
 # Environment variables
 .env
-.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+!.env.example
 
 # Python
 venv/
