--- a/mental-health-backend/requirements.txt
+++ b/mental-health-backend/requirements.txt
@@ -14,9 +14,13 @@ passlib[bcrypt]==1.7.4
 
 # AI and ML dependencies
 transformers==4.35.2
-torch==2.1.0
-numpy==1.24.3
+torch>=2.6.0
+numpy>=1.24.3
 tokenizers==0.15.0
+
+# Voice analysis (Whisper - free local AI)
+openai-whisper>=20231117
+ffmpeg-python>=0.2.0
 
 # Text processing and emoji support
 emoji==2.8.0
